<resources>

    <string name="app_name">Library of Alexandria
    </string>
    <string name="action_settings">Settings</string>
    <string name="search_item">Search</string>
    <string name="textview">TextView</string>
    <string name="year_of_publication">Year of Publication</string>
    <string name="genre">Genre</string>
    <string name="description_hints">Enter your description here...</string>
    <string name="edition">Edition</string>
    <string name="publisher">Publisher</string>
    <string name="author">Author</string>
    <string name="isbn">ISBN</string>
    <string name="book_name">Book Name</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="search_book_hints">Search books...</string>
    <string name="add_book">Add Book</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="short_by_author">Short by author</string>
    <string name="short_by_name">Short by name</string>
    <string name="short_by_publisher">Short by publisher</string>

</resources>
