<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_menu_item"
        android:title="@string/search"
        android:icon="@drawable/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/filter_menu_item"
        android:title="@string/filter"
        android:icon="@drawable/filter"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/short_by_author_menu_item"
                android:title="@string/short_by_author" />
            <item
                android:id="@+id/short_by_name_menu_item"
                android:title="@string/short_by_name" />
            <item
                android:id="@+id/short_by_publisher_menu_item"
                android:title="@string/short_by_publisher" />
        </menu>
    </item>
</menu>